--- a/css/_header.scss
+++ b/css/_header.scss
@@ -5,7 +5,7 @@ header {
   @media  (min-width: 40em) {
     padding: 100px;
   }
-  padding: 40px 20px;
+  padding: 40px 40px;
   margin: 0;
 
   
@@ -49,10 +49,11 @@ header {
       font-size: 16px;
       line-height: 24px;
       padding: 0;
-      margin: 0 0 0 40px;
+      margin: 0 0 0 20px;
       @media  (min-width: 40em) {
         font-size: 24px;
         line-height: 24px;
+        margin: 0 0 0 40px;
       }
     }
   }
