--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -1,28 +1,27 @@
 body {
     transition: all 300ms linear;     
-    
-    box-shadow: 0 0 0 10px #FDCBBE inset, 0 0 0 -10px #FFCBBD inset;
+    box-shadow: 0 0 0 10px $page-border inset, 0 0 0 -10px $page-border inset;
     opacity: 1;
+    background-color: $tan;
     @media  (min-width: 40em) {
-      
-      box-shadow: 0 0 0 20px #FDCBBE inset, 0 0 0 -20px #FFCBBD inset;
+      box-shadow: 0 0 0 15px $page-border inset, 0 0 0 -15px $page-border inset;
     } 
 }
 
 
 body.home-page {
-    box-shadow: 0 0 0 10px #FDCBBE inset, 0 0 0 -10px #FFCBBD inset;
+    box-shadow: 0 0 0 10px $page-border inset, 0 0 0 -10px $page-border inset;
     opacity: 1;
     @media  (min-width: 40em) {
-      box-shadow: 0 0 0 20px #FDCBBE inset, 0 0 0 -20px #FFCBBD inset;
+      box-shadow: 0 0 0 15px $page-border inset, 0 0 0 -15px $page-border inset;
     }
 }
 
 body.work-page {
-    box-shadow: 0 0 0 -10px #FDCBBE inset, 0 0 0 10px #FFCBBD inset;
+    box-shadow: 0 0 0 -10px $page-border inset, 0 0 0 10px $page-border inset;
     opacity: 1;
     @media  (min-width: 40em) {
-      box-shadow: 0 0 0 -20px #FDCBBE inset, 0 0 0 20px #FFCBBD inset;
+      box-shadow: 0 0 0 -15px $page-border inset, 0 0 0 15px $page-border inset;
     }
 }
 
@@ -31,7 +30,7 @@ body.work-page {
     min-height: calc(100vh - 20px);
     
     @media  (min-width: 40em) {
-      min-height: calc(100vh - 40px); 
+      min-height: calc(100vh - 30px); 
     }
 }
 
